<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_enter_score"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#323a46"
    tools:context="com.example.sanj.brickbreakout.ScoreDisplayActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/PerformanceText"
        android:text="@string/dummy"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="#771414"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scoreText"
        android:text="@string/dummy"
        android:layout_marginTop="60dp"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="#771414"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dummy"
        android:id="@+id/finalScore"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="180dp"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="#13a762"
        />

    <EditText
        android:id="@+id/nameEdit"
        android:hint="@string/enteranme"
        android:textColorHint="#ffff"
        android:layout_marginRight="120dp"
        android:layout_marginTop="120dp"
        android:textColor="#ffff"
        android:textStyle="bold"
        android:textSize="18sp"
        android:backgroundTint="@color/colorAccent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/submit"
        android:layout_marginTop="120dp"
        android:text="@string/submit"
        android:textColor="#ffff"
        android:textStyle="bold"
        android:background="@drawable/helpshape"
        android:layout_marginLeft="200dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mainMenu"
        android:layout_marginTop="250dp"
        android:layout_marginLeft="85dp"
        android:layout_marginRight="85dp"
        android:text="@string/returnMain"
        android:textStyle="bold"
        android:textColor="#ffff"
        android:background="@drawable/newgameshape"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/highscoreActivity"
        android:layout_marginTop="320dp"
        android:layout_marginLeft="85dp"
        android:layout_marginRight="85dp"
        android:text="@string/highScoreObjects"
        android:textStyle="bold"
        android:textColor="#ffff"
        android:background="@drawable/highscoreshape"
        />


</RelativeLayout>
