<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#000000"
    style="@style/Theme.MyCustomTheme"
    tools:context="com.example.sanj.brickbreakout.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="BRICK BREAK"
        android:textColor="#771414"
        android:textSize="48sp"
        android:textStyle="bold" />

    <Button
        android:text="@string/newgame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:id="@+id/newgame"
        android:background="@drawable/newgameshape"
        android:textColor="#ffff"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_below="@+id/textView"
        android:layout_alignEnd="@+id/textView"
        android:layout_alignStart="@+id/textView" />

    <Button
        android:text="@string/highscores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/newgame"
        android:layout_alignStart="@+id/newgame"
        android:layout_marginTop="10dp"
        android:background="@drawable/highscoreshape"
        android:textColor="#ffff"
        android:textSize="18sp"
        android:textStyle="bold"
        android:id="@+id/highscores"
        android:layout_alignEnd="@+id/newgame" />

    <Button
        android:text="@string/help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/highscores"
        android:layout_marginTop="10dp"
        android:background="@drawable/helpshape"
        android:textColor="#ffff"
        android:textSize="18sp"
        android:textStyle="bold"
        android:id="@+id/help"
        android:layout_alignStart="@+id/highscores"
        android:layout_alignEnd="@+id/highscores" />

    <Button
        android:text="@string/quit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/help"
        android:layout_alignStart="@+id/help"
        android:layout_marginTop="10dp"
        android:id="@+id/quit"
        android:background="@drawable/quitshape"
        android:textColor="#ffff"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_alignEnd="@+id/help" />
</RelativeLayout>
